# Laplace-Pathfinder

./: .gitignore  README.md  commands.txt  pipeline.txt  startup_bash.sh  startup_laplace_pathfinder.sh  startup_tmux.sh
install/: local_setup.sh  setup.sh
install/aws_robomaker_bookstore_world/share/aws_robomaker_bookstore_world/: package.bash  package.sh  package.zsh
install/aws_robomaker_small_warehouse_world/share/aws_robomaker_small_warehouse_world/: package.bash  package.zsh
install/dynamic_logistics_warehouse/share/ament_index/resource_index/package_run_dependencies/: dynamic_logistics_warehouse
install/dynamic_logistics_warehouse/share/dynamic_logistics_warehouse/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/dynamic_logistics_warehouse/share/dynamic_logistics_warehouse/cmake/: dynamic_logistics_warehouseConfig.cmake
install/dynamic_logistics_warehouse/share/dynamic_logistics_warehouse/launch/: logistics_warehouse.launch.py
install/dynamic_logistics_warehouse/share/dynamic_logistics_warehouse/worlds/: warehouse_static.world
install/gazebo_ros2_2dmap_plugin/include/: gazebo_2Dmap_plugin.h
install/gazebo_ros2_2dmap_plugin/lib/gazebo_ros2_2dmap_plugin/: generate_map.sh
install/gazebo_ros2_2dmap_plugin/share/gazebo_ros2_2dmap_plugin/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/gazebo_ros2_2dmap_plugin/share/gazebo_ros2_2dmap_plugin/cmake/: gazebo_ros2_2dmap_pluginConfig.cmake
install/gazebo_ros2_2dmap_plugin/share/gazebo_ros2_2dmap_plugin/launch/: generate_map.launch.py
install/laplace_pathfinder/include/laplace_pathfinder/: robot_nav_controller.hpp  robot_nav_planner.hpp  utils.hpp
install/laplace_pathfinder/lib/laplace_pathfinder/: robot_nav_planner
install/laplace_pathfinder/share/ament_index/resource_index/parent_prefix_path/: laplace_pathfinder
install/laplace_pathfinder/share/laplace_pathfinder/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/laplace_pathfinder/share/laplace_pathfinder/config/: robot_nav_controller_params.yaml  scenario_config.yaml
install/laplace_pathfinder/share/laplace_pathfinder/launch/: laplace_pathfinder.launch.py  robot_nav_planner.launch.py  simulation.launch.py  teleop.launch.py  warehouse_with_burger.launch.py
install/laplace_pathfinder/share/laplace_pathfinder/maps/: bookstore.pgm  bookstore.yaml  bookstore_map.py  bookstore_map_phi.npy
install/laplace_pathfinder/share/laplace_pathfinder/models/: goal_marker.sdf
log/: latest_build
src/aws-robomaker-bookstore-world/: CMakeLists.txt
src/aws-robomaker-bookstore-world/models/aws_robomaker_retail_Spotlight_01/meshes/: aws_Spotlight_01_collision.DAE  aws_Spotlight_01_visual.DAE
src/aws-robomaker-bookstore-world/src/: ActorCollisionPlugin.cpp
src/dynamic_logistics_warehouse/: CMakeLists.txt  package.xml
src/dynamic_logistics_warehouse/launch/: logistics_warehouse.launch.py
src/dynamic_logistics_warehouse/worlds/: warehouse.world
src/gazebo_ros2_2Dmap_plugin/: CMakeLists.txt  README.md
src/gazebo_ros2_2Dmap_plugin/src/: gazebo_2Dmap_plugin.cpp
src/laplace_pathfinder/: CMakeLists.txt  package.xml
src/laplace_pathfinder/config/: local_costmap_params.yaml  perturbation_params.yaml  robot_nav_controller_params.yaml  robot_nav_planner_params.yaml  scenario_config.yaml
src/laplace_pathfinder/include/laplace_pathfinder/: perturbation.hpp  robot_nav_controller.hpp  robot_nav_planner.hpp  utils.hpp
src/laplace_pathfinder/launch/: laplace_pathfinder.launch.py  local_costmap.launch.py  perturbation.launch.py  robot_nav_controller.launch.py  simulation.launch.py
src/laplace_pathfinder/maps/: bookstore_map.npy  bookstore_map.py  bookstore_map_phi.npy  phi_debug.npy  scenario_config.yaml
src/laplace_pathfinder/models/: laplace_nn_1000.pt  patch_nn_scripted.pt  start_marker.sdf
src/laplace_pathfinder/offboard/: debugger.py  laplace_solver.py  main.py  npy_visualizer.py  offboard_main.py  plotter.py  simulation_gateway.py  train_laplace_nn.py  train_simple_patch_nn.py  visualize.py
src/laplace_pathfinder/src/: perturbation_main.cpp  perturbation_node.cpp  robot_nav_controller_main.cpp  robot_nav_controller_node.cpp  robot_nav_planner_main.cpp  robot_nav_planner_node.cpp  utils.cpp
src/laplace_pathfinder/worlds/: dynamic_bookstore.world
