<?xml version="1.0"?>
<package format="3">
  <name>dynamic_logistics_warehouse</name>
  <version>1.0.0</version>
  <description>Dynamic logistics warehouse Gazebo world for ROS 2 Humble.</description>

  <maintainer email="belalonium@outlook.com">belal-ibrahim</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_plugins</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros gazebo_model_path="${prefix}/models"
                gazebo_media_path="${prefix}"/>
  </export>
</package>